--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.13.1"
   },
@@ -32,6 +33,7 @@
     "@faker-js/faker": "^9.1.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
